@@ -2,7 +2,7 @@
 Encoding=UTF-8
 Version=1.0
 Type=Application
-Name=\s
+Name=JMita 2
 Icon=jmita2.png
 Path=/home/druzy
 Exec=/usr/bin/jmita2.sh
