@@ -1,3 +1,6 @@
+jmita version 0.7.6 :
+bug fix : Correction de la location du clique droit
+
 jmita version 0.7.5 :
 bug fix : problème avec les arguments à espace
 
